added q3 highlights and information

--- a/docs/2023-Q3-blog.md
+++ b/docs/2023-Q3-blog.md
@@ -3,17 +3,23 @@
 
 We're excited to announce the release of 2023.Q3 in HAWC! There are many updates we hope you'll like, some of the key highlights include:
 
+* [New icon for unpublished projects](#unpublished-badge)
 * [Data Pivot Visualization Improvements](#data-pivot-visualization-improvements)
-* [Update 2](#update-2)
-* [Update 3](#update-2)
-* [Update 4](#update-2)
-* [User defined forms](#user-defined-forms) (coming soon)
-* [HAWCNest](#hawcnest) (coming soon)
+* [Improved literature review search capabilities](#literature-review-updates)
+* [New adverse direction field](#adverse-direction-field)
+* [Download study evaluation heatmaps and barcharts](#download-visual-data)
+* [User defined forms 🧪](#user-defined-forms)
+* [HAWCNest 🧪](#hawcnest)
 
-    If you'd like to read the release notes online, please visit the [release notes](#)
+If you'd like to read the release notes online, please visit the [release notes]().
+
+### Unpublished icon
+A new 'Unpublished' badge will appear on relevant assessments, studies, visuals, etc., so you always know the status of your project.
+
+![unpublished icon](screenshot)
 
 ### Data Pivot visualization improvements
-#### Arrows when confidence intervals extend beyond plot domain
+#### Displays arrows when confidence intervals extend beyond plot domain
 If an x-axis domain is restricted to be less than the entire domain, arrows are shown. Hovering over the bar will show upper and lower values.
 
 ![Arrow confidence intervals](screenshot)
@@ -28,24 +34,39 @@ Previously, when setting an x-axis range, we'd automatically assume that you'd w
 
 ![x-axis](screenshot)
 
+### Literature Review updates
+Adds use of an index and search vectors to the Reference model and filterset so you can search for references easier.
 
+### Adverse Direction field
+New adverse direction field added to epidemiological study population Data Extractions. The field defaults to "Unspecified", and two columns, `adverse_direction` and `adverse_direction_display` have been added to exports.
 
+![under data extraction](screenshot)
 
-### update 2
-### update 3
-### update 4
+![dropdown choices](screenshot)
+
+### Download Visual Data
+There is now a new option in the actions menu to download data from study evaluation/risk of bias heatmaps and barcharts.
+
+### User Defined Forms
+User defined forms (UDFs) will allow project managers to add additional fields which are specific for that assessment to certain forms, like the Study form.
+
 ### HAWCNest
-HAWCNest is an internal application that allows users to rapidly create dynamic plots, tables and visuals.
+HAWCNest is an internal application that allows users to rapidly create dynamic plots, tables and visuals. The goal of this feature is to reduce the time it takes for you to manually build these tables and visuals.
 #### Animal bioassay endpoints
-![hawcnest animal](screenshot)
+HAWCNest can quickly manipulate tables and perform calculations to display the percent change between endpoint response data.
+
+Users enter an assessment ID and view its data as a table in the HAWCNest. They can customize their table by adding or removing columns as they please. Furthermore, they can filter any column in their custom table to display specific data points. HAWCNest will then rapidly calculate the percent change and generate dynamic footnotes.
+
+![hawcnest animal](screenshot) maybe make gif?
+
 #### Point of departure/ Reference dose plot
-![hawcnest pod](screenshot)
+![hawcnest pod](screenshot) gif?
 
 ### Thank you to the contributors of HAWC
 Contributions to HAWC:
 * include PR's?
 * or just names of contributors
 
-We encourage you to try out the new features in [application name] and share your feedback with us. We're always looking for ways to improve our application and make it more useful for our users.
+We encourage you to try out the new features in HAWC and share your feedback with us. We're always looking for ways to improve our application and make it more useful for our users!
 
 [Accessibility Statement](https://www.epa.gov/accessibility/epa-accessibility-statement)
