minor updates, ready for screenshots

--- a/docs/2023-Q3-blog.md
+++ b/docs/2023-Q3-blog.md
@@ -3,17 +3,17 @@
 
 We're excited to announce the release of 2023.Q3 in HAWC! There are many updates we hope you'll like, some of the key highlights include:
 
-* [New icon for unpublished projects](#unpublished-badge)
-* [Data Pivot Visualization Improvements](#data-pivot-visualization-improvements)
+* [An easier way to check your unpublished projects](#new-unpublished-icon)
+* [Data Pivot visualization Improvements](#data-pivot-visualization-improvements)
 * [Improved literature review search capabilities](#literature-review-updates)
 * [New adverse direction field](#adverse-direction-field)
 * [Download study evaluation heatmaps and barcharts](#download-visual-data)
 * [User defined forms 🧪](#user-defined-forms)
 * [HAWCNest 🧪](#hawcnest)
 
-If you'd like to read the release notes online, please visit the [release notes]().
+If you'd like to read the release notes online, please visit the [release notes](). Features marked with the lab icon 🧪 indicate they're not yet available and are behind feature flags.
 
-### Unpublished icon
+### New 'Unpublished' icon
 A new 'Unpublished' badge will appear on relevant assessments, studies, visuals, etc., so you always know the status of your project.
 
 ![unpublished icon](screenshot)
@@ -35,10 +35,11 @@ Previously, when setting an x-axis range, we'd automatically assume that you'd w
 ![x-axis](screenshot)
 
 ### Literature Review updates
-Adds use of an index and search vectors to the Reference model and filterset so you can search for references easier.
+#### Improved search capabilities
+We have added the use of an index and search vectors to the Reference model and filterset, so you can search for references more efficiently.
 
 ### Adverse Direction field
-New adverse direction field added to epidemiological study population Data Extractions. The field defaults to "Unspecified", and two columns, `adverse_direction` and `adverse_direction_display` have been added to exports.
+A new field, adverse direction, has been added to epidemiological study population Data Extractions. This field defaults to "Unspecified", and two columns, `adverse_direction` and `adverse_direction_display` have been added to exports.
 
 ![under data extraction](screenshot)
 
@@ -47,8 +48,14 @@ New adverse direction field added to epidemiological study population Data Extra
 ### Download Visual Data
 There is now a new option in the actions menu to download data from study evaluation/risk of bias heatmaps and barcharts.
 
+This is what the downloaded data will look like.
+
+![heatmap download](screenshot)
+
 ### User Defined Forms
 User defined forms (UDFs) will allow project managers to add additional fields which are specific for that assessment to certain forms, like the Study form.
+
+![udf](screenshot?)
 
 ### HAWCNest
 HAWCNest is an internal application that allows users to rapidly create dynamic plots, tables and visuals. The goal of this feature is to reduce the time it takes for you to manually build these tables and visuals.
@@ -62,10 +69,17 @@ Users enter an assessment ID and view its data as a table in the HAWCNest. They 
 #### Point of departure/ Reference dose plot
 ![hawcnest pod](screenshot) gif?
 
-### Thank you to the contributors of HAWC
-Contributions to HAWC:
-* include PR's?
-* or just names of contributors
+### A huge thanks to the contributors of HAWC
+
+HAWC contributors on Github:
+* Andy Shapiro (shapiromatron)
+* Casey Hansen (casey1173)
+* Danny Peterson (dannypeterson)
+* Danny Rabstejnek (rabstejnek)
+* Matthew Munns (munnsmunns)
+* Sean Watford (swatford)
+
+The entire changelog can be found [here](https://github.com/shapiromatron/hawc/pulls?q=is%3Apr+is%3Amerged+sort%3Aupdated-asc+updated%3A%3E2023-08-02+closed%3A%3C2023-10-05+).
 
 We encourage you to try out the new features in HAWC and share your feedback with us. We're always looking for ways to improve our application and make it more useful for our users!
 
