--- a/docs/2023-Q3-blog.md
+++ b/docs/2023-Q3-blog.md
@@ -11,28 +11,28 @@ We're excited to announce the release of 2023.Q3 in HAWC! There are many updates
 * [User defined forms 🧪](#user-defined-forms)
 * [HAWCNest 🧪](#hawcnest)
 
-If you'd like to read the release notes online, please visit the [release notes](). Features marked with the lab icon 🧪 indicate they're not yet available and are behind feature flags.
+If you'd like to read the release notes online, please visit the [release notes](#TODO). Features marked with the lab icon 🧪 indicate they're not yet available and are behind feature flags.
 
 ### New 'Unpublished' icon
 A new 'Unpublished' badge will appear on relevant assessments, studies, visuals, etc., so you always know the status of your project.
 
-![unpublished icon](screenshot)
+![unpublished icon](#TODO)
 
 ### Data Pivot visualization improvements
 #### Displays arrows when confidence intervals extend beyond plot domain
 If an x-axis domain is restricted to be less than the entire domain, arrows are shown. Hovering over the bar will show upper and lower values.
 
-![Arrow confidence intervals](screenshot)
+![Arrow confidence intervals](#TODO)
 
 #### Configure plot background colors and gridlines
 Added more flexibility to show/hide background color, gridlines, and text grid. The default layout is unchanged.
 
-![Plot background](screenshot)
+![Plot background](#TODO)
 
 #### `x-axis` customization
 Previously, when setting an x-axis range, we'd automatically assume that you'd want to show around 10 ticks (numbers on the x-axis), but would be flexible to show more or less depending on the range. Now, if you'd like more control, you can set the domain to be forced, and set the number of ticks. This will allow full control of setting the x-axis bounds and layout.
 
-![x-axis](screenshot)
+![x-axis](#TODO)
 
 ### Literature Review updates
 #### Improved search capabilities
@@ -41,21 +41,21 @@ We have added the use of an index and search vectors to the Reference model and 
 ### Adverse Direction field
 A new field, adverse direction, has been added to epidemiological study population Data Extractions. This field defaults to "Unspecified", and two columns, `adverse_direction` and `adverse_direction_display` have been added to exports.
 
-![under data extraction](screenshot)
+![under data extraction](#TODO)
 
-![dropdown choices](screenshot)
+![dropdown choices](#TODO)
 
 ### Download Visual Data
 There is now a new option in the actions menu to download data from study evaluation/risk of bias heatmaps and barcharts.
 
 This is what the downloaded data will look like.
 
-![heatmap download](screenshot)
+![heatmap download](#TODO)
 
 ### User Defined Forms
 User defined forms (UDFs) will allow project managers to add additional fields which are specific for that assessment to certain forms, like the Study form.
 
-![udf](screenshot?)
+![udf](#TODO?)
 
 ### HAWCNest
 HAWCNest is an internal application that allows users to rapidly create dynamic plots, tables and visuals. The goal of this feature is to reduce the time it takes for you to manually build these tables and visuals.
@@ -64,10 +64,10 @@ HAWCNest can quickly manipulate tables and perform calculations to display the p
 
 Users enter an assessment ID and view its data as a table in the HAWCNest. They can customize their table by adding or removing columns as they please. Furthermore, they can filter any column in their custom table to display specific data points. HAWCNest will then rapidly calculate the percent change and generate dynamic footnotes.
 
-![hawcnest animal](screenshot) maybe make gif?
+![hawcnest animal](#TODO) maybe make gif?
 
 #### Point of departure/ Reference dose plot
-![hawcnest pod](screenshot) gif?
+![hawcnest pod](#TODO) gif?
 
 ### A huge thanks to the contributors of HAWC
 
