--- a/docs/2023-Q3-blog.md
+++ b/docs/2023-Q3-blog.md
@@ -73,7 +73,7 @@ Users enter an assessment ID and view its data as a table in the HAWCNest. They 
 
 HAWC contributors on Github:
 * Andy Shapiro (shapiromatron)
-* Casey Hansen (casey1173)
+* Casey Hansen (caseyhans)
 * Danny Peterson (dannypeterson)
 * Danny Rabstejnek (rabstejnek)
 * Matthew Munns (munnsmunns)
