convert to assessment viewsets

--- a/scripts/client/bulk_rob_copy.ipynb
+++ b/scripts/client/bulk_rob_copy.ipynb
@@ -148,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_metrics = client.session.get(f\"{domain}/rob/api/metrics/?assessment_id={src_assessment_id}\").json()\n",
-    "dst_metrics = client.session.get(f\"{domain}/rob/api/metrics/?assessment_id={dst_assessment_id}\").json()"
+    "src_metrics = client.session.get(f\"{domain}/rob/api/metric/?assessment_id={src_assessment_id}\").json()\n",
+    "dst_metrics = client.session.get(f\"{domain}/rob/api/metric/?assessment_id={dst_assessment_id}\").json()\n"
    ]
   },
   {
