--- a/scripts/client/rob-config.ipynb
+++ b/scripts/client/rob-config.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f\"{client.session.root_url}/rob/api/metrics/?assessment_id={assessment_id}\"\n",
+    "url = f\"{client.session.root_url}/rob/api/metric/?assessment_id={assessment_id}\"\n",
     "data = client.session.get(url).json()\n",
     "metrics = sorted(data, key=lambda d: d['sort_order'])"
    ]
