Update test data files

--- a/scripts/client/load_guideline_profile.ipynb
+++ b/scripts/client/load_guideline_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsv\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdjango\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconf\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m settings\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "# Combine the spreadsheet and replace the endpoint_ids with the Hawc toxref\n",
     "hawc_df = pd.read_csv('C:/Users/63080/Downloads/hawc/hawc_toxref_export.csv')\n",
@@ -72,15 +84,19 @@
     "# Replace the endpoint_id column values\n",
     "df['endpoint_id'] = df['id']\n",
     "\n",
-    "# Drop the id column as it's no longer needed\n",
+    "# Drop the term columns as they're no longer needed\n",
     "df.drop(columns=['id'], inplace=True)\n",
+    "df.drop(columns=['endpoint_type'], inplace=True)\n",
+    "df.drop(columns=['endpoint_category'], inplace=True)\n",
+    "df.drop(columns=['endpoint_target'], inplace=True)\n",
+    "df.rename(columns={'guideline_profile_id': 'id'}, inplace=True)\n",
     "\n",
     "# Clean up data\n",
     "df[\"obs_status\"] = df[\"obs_status\"].str.strip()\n",
     "df[\"description\"] = df[\"description\"].str.strip()\n",
     "\n",
     "# # Save the updated DataFrame back to a CSV file\n",
-    "df.to_csv('guideline_profile_updated.csv', index=False)"
+    "df.to_csv('guideline_updated.csv', index=False)"
    ]
   },
   {
@@ -99,7 +115,7 @@
     "## Create new GuidelineProfile Objects\n",
     "GuidelineProfile.objects.all().delete()\n",
     "\n",
-    "with open('guideline_profile_updated.csv', 'r') as csv_file:\n",
+    "with open('guideline_updated.csv', 'r') as csv_file:\n",
     "    csv_reader = csv.DictReader(csv_file)\n",
     "\n",
     "    for row in csv_reader:\n",
@@ -118,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Generate the data fixture in JSONL instead of CSV\n",
-    "file = settings.PROJECT_PATH / \"apps/vocab/fixtures/guideline_profile.jsonl\"\n",
+    "file = settings.PROJECT_PATH / \"apps/vocab/fixtures/guideline.jsonl\"\n",
     "\n",
     "def _get_headers(cursor) -> list[str]:\n",
     "    cursor.execute(\"Select * FROM vocab_guidelineprofile LIMIT 0\")\n",
@@ -134,12 +150,12 @@
     "\n",
     "    for row in data:\n",
     "        row_dict = {header: row[i] for i, header in enumerate(headers)}\n",
-    "        pk = row_dict[\"guideline_profile_id\"]\n",
+    "        pk = row_dict[\"id\"]\n",
     "\n",
     "        fields = {}\n",
     "        for i, header in enumerate(headers):\n",
     "            # id should not be in fields\n",
-    "            if header != \"guideline_profile_id\":\n",
+    "            if header != \"id\":\n",
     "                fields[header] = row[i]\n",
     "\n",
     "        # JSONL\n",
